# ScrumAI

./: .env.example  .gitignore  CLAUDE.md  README.md  client.py  goal.md  main.py  pyproject.toml
docs/: PRD.md  ScrumAI_PRD_v0.1.md
models/: __init__.py  brainstorm.py  role.py  scoring.py  task.py
prompts/: brainstorm.md  issue_scoring.md  role_dispatch.md  task_decomposition.md
runners/: __init__.py  brainstorm.py  dispatch.py  scoring.py  task.py
