[project]
name = "scrumai-prompts"
version = "0.2.0"
description = "ScrumAI Prompt Playground - Debug and test AI prompts for the ScrumAI Forge Jira plugin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=0.3.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
scrumai = "main:main"
